--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@react-hook/media-query": "^1.1.1",
+    "firebase": "^10.12.2",
     "next": "14.1.3",
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-firebase-hooks": "^5.1.1",
     "sass": "^1.71.1",
     "server-only": "^0.0.1"
   },
