--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "liqpayjs-sdk": "^3.3.1",
     "next": "14.1.3",
     "next-auth": "^4.24.7",
+    "node-fetch": "^3.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-firebase-hooks": "^5.1.1",
