--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^14.2.5",
     "@react-hook/media-query": "^1.1.1",
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
